ops: add import alias, clean up unused files

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,5 +1,16 @@
 {
   "files": [],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@data/*": ["src/data/*"],
+      "@types/*": ["src/types/*"],
+      "@components": ["src/components"],
+      "@data": ["src/data"],
+      "@types": ["src/types"]
+    }
+  },
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
