--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.5.21"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "typescript": "~5.8.3",
