--- a/app/tsconfig.app.json
+++ b/app/tsconfig.app.json
@@ -5,12 +5,12 @@
 
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@data/*": ["src/data/*"],
-      "@types/*": ["src/types/*"],
-      "@components": ["src/components"],
-      "@data": ["src/data"],
-      "@types": ["src/types"]
+      "@components/*": ["src/components/*.ts", "src/components/*"],
+      "@data/*": ["src/data/*.ts", "src/data/*"],
+      "@models/*": ["src/models/*.ts", "src/models/*"],
+      "@components": ["src/components/index.ts", "src/components"],
+      "@data": ["src/data/index.ts", "src/data"],
+      "@models": ["src/models/index.ts", "src/models"]
     },
 
     /* Linting */
