--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17",
     "three": "^0.181.2",
     "vue": "^3.5.21"
