--- a/app/package.json
+++ b/app/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
-    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17",
     "three": "^0.181.2",
-    "vue": "^3.5.21"
+    "vue": "^3.5.21",
+    "vue3-carousel": "^0.17.0"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
