fix: use swiper for projects carousel

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -9,7 +9,8 @@
       "@components": ["src/components/index.ts", "src/components"],
       "@data": ["src/data/index.ts", "src/data"],
       "@models": ["src/models/index.ts", "src/models"]
-    }
+    },
+    "moduleResolution": "bundler"
   },
   "references": [
     { "path": "./tsconfig.app.json" },
