--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@tailwindcss/vite": "^4.1.17",
+    "pinia": "^3.0.4",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17",
     "three": "^0.181.2",
