--- a/app/tsconfig.app.json
+++ b/app/tsconfig.app.json
@@ -8,9 +8,11 @@
       "@components/*": ["src/components/*.ts", "src/components/*"],
       "@data/*": ["src/data/*.ts", "src/data/*"],
       "@models/*": ["src/models/*.ts", "src/models/*"],
+      "@store/*": ["src/store/*.ts", "src/store/*"],
       "@components": ["src/components/index.ts", "src/components"],
       "@data": ["src/data/index.ts", "src/data"],
-      "@models": ["src/models/index.ts", "src/models"]
+      "@models": ["src/models/index.ts", "src/models"],
+      "@store": ["src/store/index.ts", "src/store"]
     },
 
     /* Linting */
