--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -5,11 +5,13 @@
     "module": "preserve",
     "paths": {
       "@components/*": ["src/components/*.ts", "src/components/*"],
-      "@data/*": ["src/data/*.ts", "src/data/*"],
-      "@models/*": ["src/models/*.ts", "src/models/*"],
       "@components": ["src/components/index.ts", "src/components"],
+      "@data/*": ["src/data/*.ts", "src/data/*"],
       "@data": ["src/data/index.ts", "src/data"],
-      "@models": ["src/models/index.ts", "src/models"]
+      "@models/*": ["src/models/*.ts", "src/models/*"],
+      "@models": ["src/models/index.ts", "src/models"],
+      "@store/*": ["src/store/*.ts", "src/store/*"],
+      "@store": ["src/store/index.ts", "src/store"],
     },
     "moduleResolution": "bundler"
   },
