--- a/app/package.json
+++ b/app/package.json
@@ -18,22 +18,23 @@
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17",
     "three": "^0.181.2",
-    "vue": "^3.5.21"
+    "vue": "^3.5.21",
+    "vue-i18n": "^11.2.7"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
-    "typescript": "~5.8.3",
-    "vite": "^7.1.7",
-    "vue-tsc": "^3.0.7",
     "eslint": "^8.48.0",
-    "vue-eslint-parser": "^9.1.0",
-    "eslint-plugin-vue": "^9.16.0",
-    "@typescript-eslint/parser": "^6.8.0",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.1.0",
-    "prettier": "^3.7.0"
+    "eslint-plugin-vue": "^9.16.0",
+    "prettier": "^3.7.0",
+    "typescript": "~5.8.3",
+    "vite": "^7.1.7",
+    "vue-eslint-parser": "^9.1.0",
+    "vue-tsc": "^3.0.7"
   }
 }
